--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,7 @@
 {
   "version": 2,
+  "buildCommand": "npm start",
+  "installCommand": "npm install",
   "builds": [
     {
       "src": "src/main.ts",
@@ -22,5 +24,17 @@
         }
       ]
     }
-  ]
+  ],
+   "routes": [
+        {
+            "src": "/(.*)",
+            "dest": "src/main.ts",
+            "methods": [
+                "GET",
+                "POST",
+                "PUT",
+                "DELETE"
+            ]
+        }
+    ]
 }
